scripts/kubernetes/manifests/web/deployment.yml
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: web
  namespace: bassa
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: kmehant/web
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          protocol: TCP
      restartPolicy: Always
