scripts/kubernetes/manifests/web/service.yml
kind: Service
apiVersion: v1
metadata:
  name: web
  namespace: bassa
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: web
