scripts/kubernetes/manifests/web/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  namespace: bassa
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80
      - path: /api/
        backend:
          serviceName: api
          servicePort: 5000
